--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1744,463 +1744,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.24065902]\n",
-      " [0.23346098]\n",
-      " [0.23631197]\n",
-      " [0.22658757]\n",
-      " [0.21463318]\n",
-      " [0.23515464]\n",
-      " [0.23403024]\n",
-      " [0.23377619]\n",
-      " [0.23397379]\n",
-      " [0.23115573]\n",
-      " [0.23264238]\n",
-      " [0.22531733]\n",
-      " [0.23587444]\n",
-      " [0.23526755]\n",
-      " [0.24175049]\n",
-      " [0.2497483 ]\n",
-      " [0.23113221]\n",
-      " [0.23753987]\n",
-      " [0.24198572]\n",
-      " [0.24112478]\n",
-      " [0.23793035]\n",
-      " [0.23485825]\n",
-      " [0.2209938 ]\n",
-      " [0.22666284]\n",
-      " [0.24076723]\n",
-      " [0.24391931]\n",
-      " [0.24096482]\n",
-      " [0.23841963]\n",
-      " [0.24154348]\n",
-      " [0.23458068]\n",
-      " [0.23380442]\n",
-      " [0.23779862]\n",
-      " [0.24535421]\n",
-      " [0.25140903]\n",
-      " [0.2494378 ]\n",
-      " [0.24623397]\n",
-      " [0.25046811]\n",
-      " [0.24966833]\n",
-      " [0.24492139]\n",
-      " [0.24919787]\n",
-      " [0.2443239 ]\n",
-      " [0.27632928]\n",
-      " [0.30658456]\n",
-      " [0.30075085]\n",
-      " [0.29784812]\n",
-      " [0.30442515]\n",
-      " [0.30975075]\n",
-      " [0.30868281]\n",
-      " [0.30363477]\n",
-      " [0.30056737]\n",
-      " [0.29531234]\n",
-      " [0.29502536]\n",
-      " [0.30659867]\n",
-      " [0.29954177]\n",
-      " [0.30182821]\n",
-      " [0.29336934]\n",
-      " [0.29300709]\n",
-      " [0.30589298]\n",
-      " [0.31439889]\n",
-      " [0.31730163]\n",
-      " [0.30756311]\n",
-      " [0.3079583 ]\n",
-      " [0.30681038]\n",
-      " [0.3031502 ]\n",
-      " [0.30236453]\n",
-      " [0.30879572]\n",
-      " [0.30359714]\n",
-      " [0.30694211]\n",
-      " [0.3109222 ]\n",
-      " [0.31498226]\n",
-      " [0.32578402]\n",
-      " [0.32205327]\n",
-      " [0.32560054]\n",
-      " [0.31935284]\n",
-      " [0.32025612]\n",
-      " [0.31795087]\n",
-      " [0.32416093]\n",
-      " [0.32200152]\n",
-      " [0.31892472]\n",
-      " [0.31712286]\n",
-      " [0.31738631]\n",
-      " [0.31598434]\n",
-      " [0.31171727]\n",
-      " [0.3176827 ]\n",
-      " [0.31360382]\n",
-      " [0.31548566]\n",
-      " [0.31395196]\n",
-      " [0.3113315 ]\n",
-      " [0.29968761]\n",
-      " [0.30101431]\n",
-      " [0.30348893]\n",
-      " [0.30348893]\n",
-      " [0.29980053]\n",
-      " [0.2991607 ]\n",
-      " [0.30311256]\n",
-      " [0.30781246]\n",
-      " [0.30972723]\n",
-      " [0.31111979]\n",
-      " [0.3080618 ]\n",
-      " [0.31712286]\n",
-      " [0.31557975]\n",
-      " [0.31299222]\n",
-      " [0.31710874]\n",
-      " [0.31940459]\n",
-      " [0.3174757 ]\n",
-      " [0.32195448]\n",
-      " [0.32812221]\n",
-      " [0.32724245]\n",
-      " [0.32643796]\n",
-      " [0.32611334]\n",
-      " [0.3275012 ]\n",
-      " [0.32255196]\n",
-      " [0.30403937]\n",
-      " [0.30506968]\n",
-      " [0.30904977]\n",
-      " [0.31603609]\n",
-      " [0.31797909]\n",
-      " [0.319828  ]\n",
-      " [0.32250962]\n",
-      " [0.32385043]\n",
-      " [0.32507363]\n",
-      " [0.32615568]\n",
-      " [0.31870831]\n",
-      " [0.31739102]\n",
-      " [0.31772975]\n",
-      " [0.31618664]\n",
-      " [0.32265076]\n",
-      " [0.31981389]\n",
-      " [0.32439146]\n",
-      " [0.34377441]\n",
-      " [0.33862757]\n",
-      " [0.33877812]\n",
-      " [0.33032396]\n",
-      " [0.33816182]\n",
-      " [0.35320712]\n",
-      " [0.35404925]\n",
-      " [0.36704805]\n",
-      " [0.36591424]\n",
-      " [0.37226075]\n",
-      " [0.37485769]\n",
-      " [0.37667837]\n",
-      " [0.37918592]\n",
-      " [0.37790627]\n",
-      " [0.3774264 ]\n",
-      " [0.37567158]\n",
-      " [0.38696732]\n",
-      " [0.38719314]\n",
-      " [0.37999511]\n",
-      " [0.38206513]\n",
-      " [0.38056436]\n",
-      " [0.37584095]\n",
-      " [0.34818261]\n",
-      " [0.33829355]\n",
-      " [0.34707703]\n",
-      " [0.33129781]\n",
-      " [0.33546608]\n",
-      " [0.32560054]\n",
-      " [0.30687154]\n",
-      " [0.30723379]\n",
-      " [0.27935434]\n",
-      " [0.29988521]\n",
-      " [0.27351123]\n",
-      " [0.25211472]\n",
-      " [0.21603045]\n",
-      " [0.18636796]\n",
-      " [0.20573208]\n",
-      " [0.14120852]\n",
-      " [0.16078435]\n",
-      " [0.1712662 ]\n",
-      " [0.19084673]\n",
-      " [0.16719201]\n",
-      " [0.13894561]\n",
-      " [0.13647099]\n",
-      " [0.13680501]\n",
-      " [0.13569002]\n",
-      " [0.14000414]\n",
-      " [0.14748916]\n",
-      " [0.16809059]\n",
-      " [0.14319856]\n",
-      " [0.13333302]\n",
-      " [0.13686617]\n",
-      " [0.14516038]\n",
-      " [0.14516979]\n",
-      " [0.12555161]\n",
-      " [0.13011507]\n",
-      " [0.1323921 ]\n",
-      " [0.11393126]\n",
-      " [0.12031069]\n",
-      " [0.13762832]\n",
-      " [0.1440595 ]\n",
-      " [0.14609659]\n",
-      " [0.12366037]\n",
-      " [0.11638706]\n",
-      " [0.12616321]\n",
-      " [0.12186321]\n",
-      " [0.11843826]\n",
-      " [0.11758202]\n",
-      " [0.12272415]\n",
-      " [0.13131945]\n",
-      " [0.12670424]\n",
-      " [0.12430019]\n",
-      " [0.11038869]\n",
-      " [0.11286802]\n",
-      " [0.12019308]\n",
-      " [0.11524384]\n",
-      " [0.10631451]\n",
-      " [0.10007621]\n",
-      " [0.1101864 ]\n",
-      " [0.11124493]\n",
-      " [0.11180478]\n",
-      " [0.13130063]\n",
-      " [0.14874058]\n",
-      " [0.15492242]\n",
-      " [0.14562143]\n",
-      " [0.15289474]\n",
-      " [0.16389409]\n",
-      " [0.15790514]\n",
-      " [0.15715711]\n",
-      " [0.14805371]\n",
-      " [0.15852144]\n",
-      " [0.14922986]\n",
-      " [0.15050951]\n",
-      " [0.15342636]\n",
-      " [0.16565361]\n",
-      " [0.18189859]\n",
-      " [0.19523142]\n",
-      " [0.21265725]\n",
-      " [0.20409018]\n",
-      " [0.2107613 ]\n",
-      " [0.20117803]\n",
-      " [0.19689214]\n",
-      " [0.19435636]\n",
-      " [0.20592027]\n",
-      " [0.20689412]\n",
-      " [0.20381261]\n",
-      " [0.22049511]\n",
-      " [0.24337357]\n",
-      " [0.22983374]\n",
-      " [0.24130825]\n",
-      " [0.2398169 ]\n",
-      " [0.23233188]\n",
-      " [0.22822477]\n",
-      " [0.22430113]\n",
-      " [0.22952794]\n",
-      " [0.23860782]\n",
-      " [0.25179951]\n",
-      " [0.2377751 ]\n",
-      " [0.23406317]\n",
-      " [0.23827849]\n",
-      " [0.23395497]\n",
-      " [0.22636175]\n",
-      " [0.23280234]\n",
-      " [0.23700355]\n",
-      " [0.23079818]\n",
-      " [0.23390322]\n",
-      " [0.22667695]\n",
-      " [0.23242597]\n",
-      " [0.23492411]\n",
-      " [0.24273845]\n",
-      " [0.25394481]\n",
-      " [0.25193594]\n",
-      " [0.25329557]\n",
-      " [0.24961187]\n",
-      " [0.2497436 ]\n",
-      " [0.24141176]\n",
-      " [0.24646449]\n",
-      " [0.24976712]\n",
-      " [0.24883091]\n",
-      " [0.24731132]\n",
-      " [0.24688791]\n",
-      " [0.25655586]\n",
-      " [0.27074963]\n",
-      " [0.27099897]\n",
-      " [0.26977107]\n",
-      " [0.2733748 ]\n",
-      " [0.25615597]\n",
-      " [0.27083902]\n",
-      " [0.2731725 ]\n",
-      " [0.2685667 ]\n",
-      " [0.26641199]\n",
-      " [0.25778846]\n",
-      " [0.25730389]\n",
-      " [0.25004469]\n",
-      " [0.25718157]\n",
-      " [0.26148157]\n",
-      " [0.25172424]\n",
-      " [0.25856472]\n",
-      " [0.25932687]\n",
-      " [0.25466461]\n",
-      " [0.25493277]\n",
-      " [0.24132237]\n",
-      " [0.23876777]\n",
-      " [0.23320223]\n",
-      " [0.21297716]\n",
-      " [0.22333198]\n",
-      " [0.24179283]\n",
-      " [0.23799151]\n",
-      " [0.23647193]\n",
-      " [0.25192183]\n",
-      " [0.24628572]\n",
-      " [0.25488573]\n",
-      " [0.24141646]\n",
-      " [0.24097423]\n",
-      " [0.24016974]\n",
-      " [0.2410448 ]\n",
-      " [0.23590738]\n",
-      " [0.24526482]\n",
-      " [0.23046416]\n",
-      " [0.23202608]\n",
-      " [0.23539928]\n",
-      " [0.23492411]\n",
-      " [0.23216722]\n",
-      " [0.23984512]\n",
-      " [0.24007565]\n",
-      " [0.23791153]\n",
-      " [0.25290509]\n",
-      " [0.24514721]\n",
-      " [0.24601756]\n",
-      " [0.23933232]\n",
-      " [0.24975771]\n",
-      " [0.25643824]\n",
-      " [0.26308584]\n",
-      " [0.27959428]\n",
-      " [0.28372021]\n",
-      " [0.29164746]\n",
-      " [0.32397275]\n",
-      " [0.32964179]\n",
-      " [0.3324175 ]\n",
-      " [0.33973316]\n",
-      " [0.33961554]\n",
-      " [0.35026675]\n",
-      " [0.36586249]\n",
-      " [0.35483492]\n",
-      " [0.37170561]\n",
-      " [0.3807008 ]\n",
-      " [0.38062552]\n",
-      " [0.3692498 ]\n",
-      " [0.3816229 ]\n",
-      " [0.38986065]\n",
-      " [0.38537246]\n",
-      " [0.38187224]\n",
-      " [0.38596995]\n",
-      " [0.38671327]\n",
-      " [0.38239445]\n",
-      " [0.37888482]\n",
-      " [0.3837776 ]\n",
-      " [0.37913417]\n",
-      " [0.38374938]\n",
-      " [0.38890562]\n",
-      " [0.4099681 ]\n",
-      " [0.41223572]\n",
-      " [0.425418  ]\n",
-      " [0.42220006]\n",
-      " [0.40237959]\n",
-      " [0.39951449]\n",
-      " [0.40680661]\n",
-      " [0.41583944]\n",
-      " [0.41764601]\n",
-      " [0.41730728]\n",
-      " [0.42988267]\n",
-      " [0.42621779]\n",
-      " [0.4248017 ]\n",
-      " [0.41878452]\n",
-      " [0.40963878]\n",
-      " [0.40129282]\n",
-      " [0.40606329]\n",
-      " [0.40615738]\n",
-      " [0.39695989]\n",
-      " [0.40241252]\n",
-      " [0.38930551]\n",
-      " [0.38690146]\n",
-      " [0.38748953]\n",
-      " [0.37208197]\n",
-      " [0.39459818]\n",
-      " [0.39674348]\n",
-      " [0.40957292]\n",
-      " [0.39585901]\n",
-      " [0.38985124]\n",
-      " [0.38385758]\n",
-      " [0.38058789]\n",
-      " [0.37346512]\n",
-      " [0.40395563]\n",
-      " [0.41473857]\n",
-      " [0.42150378]\n",
-      " [0.44594417]\n",
-      " [0.44911507]\n",
-      " [0.44527141]\n",
-      " [0.43610685]\n",
-      " [0.4432202 ]\n",
-      " [0.45179669]\n",
-      " [0.45277524]\n",
-      " [0.47181946]\n",
-      " [0.46997525]\n",
-      " [0.46479079]\n",
-      " [0.45144855]\n",
-      " [0.44529493]\n",
-      " [0.43390039]\n",
-      " [0.43454492]\n",
-      " [0.4514062 ]\n",
-      " [0.44830587]\n",
-      " [0.4233668 ]\n",
-      " [0.42354557]\n",
-      " [0.42820313]\n",
-      " [0.44952437]\n",
-      " [0.44416112]\n",
-      " [0.44030335]\n",
-      " [0.42861243]\n",
-      " [0.43749471]\n",
-      " [0.44972666]\n",
-      " [0.45093104]\n",
-      " [0.43975291]\n",
-      " [0.44134307]\n",
-      " [0.43229613]\n",
-      " [0.43342993]\n",
-      " [0.44108902]\n",
-      " [0.43507654]\n",
-      " [0.43408387]\n",
-      " [0.4238749 ]\n",
-      " [0.40993988]\n",
-      " [0.41566537]\n",
-      " [0.41665334]\n",
-      " [0.41254152]\n",
-      " [0.42404897]\n",
-      " [0.39491339]\n",
-      " [0.3977926 ]\n",
-      " [0.40569633]\n",
-      " [0.40121755]\n",
-      " [0.38642629]\n",
-      " [0.35243087]\n",
-      " [0.37291939]\n",
-      " [0.3664788 ]\n",
-      " [0.36236698]\n",
-      " [0.34947638]\n",
-      " [0.36208941]\n",
-      " [0.36915101]\n",
-      " [0.36718449]\n",
-      " [0.37365331]\n",
-      " [0.38574413]\n",
-      " [0.42487227]\n",
-      " [0.44406233]\n",
-      " [0.440962  ]]\n",
-      "(1, 100)\n"
+     "ename": "NameError",
+     "evalue": "name 'test_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-b4f3566e1c93>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m241\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m341\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mx_input\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtypeof\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_input\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# print(test_data)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# print(x_input.shape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_data' is not defined"
      ]
     }
    ],
    "source": [
     "x_input=test_data[241:341].reshape(1,-1)\n",
     "x_input.shape\n",
-    "print(test_data)\n",
-    "print(x_input.shape)\n"
+    "print(typeof(x_input))\n",
+    "# print(test_data)\n",
+    "# print(x_input.shape)\n"
    ]
   },
   {
